cmake_minimum_required(VERSION 3.10)
project(CompsciSpring2019)

set(CMAKE_CXX_STANDARD 17)

add_executable(LabExercise0 src/Labs/LabExercise0/LabExercise0.cpp src/Labs/LabExercise0/LabExercise0.h)
add_executable(Exercise1-CodeAlignment src/Exercises/Exercise1-CodeAlignment.cpp)
add_executable(Exercise2-CodeAlignment src/Exercises/Exercise2-CodeAlignment.cpp)
add_executable(Exercise3-Console src/Exercises/Exercise3-Console.cpp)