cmake_minimum_required(VERSION 3.10)
project(CompsciSpring2019)

set(CMAKE_CXX_STANDARD 17)

add_executable(LabExercise0 src/Labs/LabExercise0/LabExercise0.cpp src/Labs/LabExercise0/LabExercise0.h)
add_executable(LabExercise1 src/Labs/LabExercise1/MyLabArray.cpp)
add_executable(Exercise1-CodeAlignment src/Exercises/Exercise1-CodeAlignment.cpp)
add_executable(Exercise2-CodeAlignment src/Exercises/Exercise2-CodeAlignment.cpp)
add_executable(Exercise3-Console src/Exercises/Exercise3-Console.cpp)
add_executable(Exercise4-File src/Exercises/Exercise4-File.cpp)
add_executable(A1-MyArray src/Assignments/Assignment1/MyArray.cpp)
add_executable(A1-Array.TestDriver src/Assignments/Assignment1/Array.TestDriver.cpp)
add_executable(A2-MyStaticArray src/Assignments/Assignment2/MyStaticArray.cpp src/Assignments/Assignment2/StaticArray.h)
add_executable(A2-StaticArray.TestDriver src/Assignments/Assignment2/StaticArray.TestDriver.cpp src/Assignments/Assignment2/StaticArray.h)