cmake_minimum_required(VERSION 3.10)
project(CompsciSpring2019)

set(CMAKE_CXX_STANDARD 17)

add_executable(LabExercise0 src/Labs/LabExercise0/LabExercise0.cpp src/Labs/LabExercise0/LabExercise0.h)
add_executable(LabExercise1 src/Labs/LabExercise1/MyLabArray.cpp)
add_executable(Exercise1-CodeAlignment src/Exercises/Exercise1-CodeAlignment.cpp)
add_executable(Exercise2-CodeAlignment src/Exercises/Exercise2-CodeAlignment.cpp)
add_executable(Exercise3-Console src/Exercises/Exercise3-Console.cpp)
add_executable(Exercise4-File src/Exercises/Exercise4-File.cpp)
add_executable(A1-MyArray src/Assignments/Assignment1/MyArray.cpp)
add_executable(A1-Array.TestDriver src/Assignments/Assignment1/Array.TestDriver.cpp)
add_executable(A2-MyStaticArray src/Assignments/Assignment2/MyStaticArray.cpp src/Assignments/Assignment2/StaticArray.h)
add_executable(A2-StaticArray.TestDriver src/Assignments/Assignment2/StaticArray.TestDriver.cpp src/Assignments/Assignment2/StaticArray.h)
add_executable(A3-MyDynamicArray src/Assignments/Assignment3/MyDynamicArray.cpp src/Assignments/Assignment3/DynamicArray.h)
add_executable(A3-DynamicArray.TestDriver src/Assignments/Assignment3/DynamicArray.TestDriver.cpp src/Assignments/Assignment3/DynamicArray.h)
add_executable(A4-DvcSchedule1 src/Assignments/Assignment4/DvcSchedule1.cpp src/Assignments/Assignment4/DynamicArray.h)
add_executable(A5-DvcSchedule2 src/Assignments/Assignment5/DvcSchedule2.cpp src/Assignments/Assignment5/DynamicArray.h)
add_executable(A6-Stack.TestDriver src/Assignments/Assignment6/Stack.TestDriver.cpp src/Assignments/Assignment6/Stack.h)
add_executable(A6-MyRPNCalculator src/Assignments/Assignment6/MyRPNCalculator.cpp src/Assignments/Assignment6/Stack.h)
add_executable(A7-Simulation src/Assignments/Assignment7/Simulation.cpp src/Assignments/Assignment7/Queue.h)
add_executable(A7-Queue.TestDriver src/Assignments/Assignment7/Queue.TestDriver.cpp src/Assignments/Assignment7/Queue.h)
add_executable(A8-Assignment8Part1 src/Assignments/Assignment8/Assignment8Part1.cpp)
add_executable(A8-Assignment8Part2 src/Assignments/Assignment8/Assignment8Part2.cpp)
add_executable(A8-Assignment8Part3 src/Assignments/Assignment8/Assignment8Part3.cpp)